# core-workflows

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  index.html  llms.txt  package-lock.json  package.json  vite.config.ts
.github/workflows/: triage-routing.yml
.gitlab/ci/: triage-step.yml
agents/chatgpt/: maintainer-profile.md
agents/claude/: builder-profile.md
agents/copilot/: ide-routing.md
agents/gemini/: context-indexer.md
config/: signal.example.yaml
src/: LocalRecon.ts  Onboarding.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hardware.rs  lib.rs  local_engine.rs  local_recon.rs
src/core/: localEngine.ts  providerRouting.ts  roles.ts
