[package]
name = "common-signal-desktop"
version = "1.0.0-alpha.0"
description = "Local Common Signal desktop control plane."
authors = ["Common Signal contributors"]
edition = "2021"
build = "build.rs"
license = "MIT"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
async-trait = "0.1"
mistralrs = "0.8.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
